# cpu-temp-rpi

./: .gitignore  Cargo.toml  README.md  cross.sh  run.sh
.cargo/: config.toml
src/: kalman.rs  main.rs
