[package]
name = "cpu-temp-rpi"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"

[profile.rust-analyzer]
inherits = "dev"

[dependencies]
anyhow = "1.0.71"
rocket = "0.5.0-rc.3"
tokio = { version = "1.2.0", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3.7"
env_logger = "0.10.0"
log = "0.4.19"